create menu page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
 <html>
+<head>
+    <title>Menu page</title>
+</head>
+
 <body>
-<h2>Hello</h2>
+<menu>
+    <li>Add task</li>
+    <li><a href="find-task">Find task</a></li>
+</menu>
 </body>
 </html>
