--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 <body>
 <menu>
     <li>Add task</li>
-    <li><a href="find-task">Find task</a></li>
+    <li><a href="/find-task">Find task</a></li>
 </menu>
 </body>
 </html>
