add href to add task

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 
 <body>
 <menu>
-    <li>Add task</li>
+    <li><a href="/add-task">Add task</a></li>
     <li><a href="/find-task">Find task</a></li>
 </menu>
 </body>
